crates/ui/src/screens/battle/snapshots/trpg_ui__screens__battle__trigger_tests__engaging_the_rogue_plays_its_line_over_the_map_then_the_combat.snap
---
source: crates/ui/src/screens/battle/trigger_tests.rs
expression: h.snapshot()
---
                                                                      ┌────────────────────────────┐
             ╔══════════════════════════════════════════╗        ╔════════════════════════════════╗│
             ║ Test Lord             Test Rogue         ║        ║                                ║│
             ║ HP 19 ██████████      HP 22 ██████████   ║        ║                                ║│
             ║                                          ║        ║                                ║│
             ╚══════════════════════════════════════════╝        ║                                ║│
                                                                 ║                                ║│
                                                                 ║                                ║│
                                                                 ║                                ║│
                                                                 ║                                ║│
                                                                 ║                                ║│
                    ≈≈≈≈≈≈≈≈≈≈....♣♣♣♣♠♠♠♠^^^^▲▲                 ║                                ║│
                    ≈≈≈≈≈≈≈≈....··Ra··♣♣♣♣^^^^^^                 ║                                ║│
                    ≈≈≈≈≈≈====······Br..♣♣♣♣....                 ║                                ║│
                    ..≈≈≈≈..··..............╦╦..                 ║                                ║│
                    ....Ar····....Br..▓▓▓▓▓▓▓▓..                 ║                                ║│
                    ..♣♣··LoRo╦╦......▓▓░░╦╦▓▓..                 ║                                ║│
                    ♣♣♣♣··..Kn........▓▓░░░░▓▓..                 ║                                ║│
                    ♣♣♠♠··............▓▓▓▓▐▌▓▓..                 ╚════════════════════════════════╝│
                                                                             Test Rogue            │
                                                                      │                            │
┌── Test Rogue ────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│   You picked the wrong fort to storm.                                                            │
│                                                                                                  │
│                                                                                                  │
│                                                                                             f ▼  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
aaaaaaaaaaaaaccccccccccccccccccccccccccccccccccccccccccccaaaaaaaaccccccccccccccccccccccccccccccccccb
aaaaaaaaaaaaacdeeeeeeeeedddddddddddddffffffffffdddddddddcaaaaaaaacddddddddddddddddddddddddddddddddcb
aaaaaaaaaaaaacdddddddggggggggggddddddddddddggggggggggdddcaaaaaaaacddddddddddddddddddddddddddddddddcb
aaaaaaaaaaaaacddddddddddddddddddddddddddddddddddddddddddcaaaaaaaacddddddddddddddddddddddddddddddddcb
aaaaaaaaaaaaaccccccccccccccccccccccccccccccccccccccccccccaaaaaaaacddddddddddddddddddddddddddddddddcb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaacddddddddddddddddddddddddddddddddcb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaacddddddddddddddddddddddddddddddddcb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaacddddddddddddddddddddddddddddddddcb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaacddddddddddddddddddddddddddddddddcb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaacddddddddddddddddddddddddddddddddcb
aaaaaaaaaaaaaaaaaaaahhhhhhiiiijjjjkkkkllllmmmmnnaaaaaaaaaaaaaaaaacddddddddddddddddddddddddddddddddcb
aaaaaaaaaaaaaaaaaaaahhhhiiiijjjjooppookkkkmmmmmmaaaaaaaaaaaaaaaaacddddddddddddddddddddddddddddddddcb
aaaaaaaaaaaaaaaaaaaahhiiiiqqqqoooooorrjjkkkkjjjjaaaaaaaaaaaaaaaaacddddddddddddddddddddddddddddddddcb
aaaaaaaaaaaaaaaaaaaajjiiiijjoojjjjjjjjjjjjjjssjjaaaaaaaaaaaaaaaaacddddddddddddddddddddddddddddddddcb
aaaaaaaaaaaaaaaaaaaajjjjttoooojjjjrrjjuuuuuuuujjaaaaaaaaaaaaaaaaacddddddddddddddddddddddddddddddddcb
aaaaaaaaaaaaaaaaaaaajjkkoovvrrssjjjjjjuuwwssuujjaaaaaaaaaaaaaaaaacddddddddddddddddddddddddddddddddcb
aaaaaaaaaaaaaaaaaaaakkkkoojjvvjjjjjjjjuuwwwwuujjaaaaaaaaaaaaaaaaacddddddddddddddddddddddddddddddddcb
aaaaaaaaaaaaaaaaaaaakklloojjjjjjjjjjjjuuuuxxuujjaaaaaaaaaaaaaaaaaccccccccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaddddddddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
bbbyyyyyyyyyyyybbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
bddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddb
bddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddb
bddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddb
bddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddb
bdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddzdyddb
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
--- legend ---
a = fg:text bg:black
b = fg:panel_border bg:panel_bg
c = fg:panel_border_focus bg:panel_bg
d = fg:text bg:panel_bg
e = fg:player bg:panel_bg
f = fg:enemy bg:panel_bg
g = fg:hp_high bg:panel_bg
h = fg:water bg:sea
i = fg:water bg:water_bg
j = fg:grass bg:grass_bg
k = fg:forest bg:forest_bg
l = fg:thicket bg:thicket_bg
m = fg:mountain bg:mountain_bg
n = fg:peak bg:peak_bg
o = fg:road bg:road_bg
p = fg:enemy bg:road_bg
q = fg:wood bg:water_bg
r = fg:enemy bg:grass_bg
s = fg:fort bg:fort_bg
t = fg:player bg:road_bg
u = fg:stone bg:stone_bg
v = fg:player bg:grass_bg
w = fg:floor bg:floor_bg
x = fg:wood bg:stone_bg
y = fg:text_highlight bg:panel_bg
z = fg:text_dim bg:panel_bg
--- overlays ---
over  208,270 16x2  hp_high
over  224,286 16x2  hp_high
over  192,254 16x2  hp_high
over  288,222 16x2  hp_high
over  272,254 16x2  hp_high
over  272,206 16x2  hp_high
over  224,270 16x2  hp_high
